# track-em-toys

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  track-em-toys.code-workspace
.claude/: settings.json
api/: .env.example  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.seed.json  vitest.config.ts
changelog/: 2026-02-22T211901Z_phase1-authentication-foundation.md  2026-02-22T211901_phase1-authentication-foundation.md  2026-02-23T000223Z_phase12-api-auth-implementation.md  2026-02-23T000223_phase12-api-auth-implementation.md  2026-02-25T205707_auth-layer-iterative-review-hardening.md  2026-02-26T054943_phase1-3-web-spa-authentication.md  2026-02-26T061855_web-eslint-typecheck-setup.md  2026-02-26T101706Z_web-auth-security-review-fixes.md  2026-02-26T101706_web-auth-security-review-fixes.md  2026-02-26T234444_migrate-domain-checklists-to-claude-md.md  2026-02-27T013446_extract-shared-helpers-simplify-config.md  (+89 more)
docs/: README.md  (+7 more)
ios/: CLAUDE.md  (+1 more)
ml/: .env.example  CLAUDE.md  README.md  TRAINING.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  vitest.config.ts
ml/scripts/: common.py  export.py  train.py  validate.py
ml/scripts/tests/: test_common.py
ml/src/: augment.test.ts  augment.ts  balance.test.ts  balance.ts  copy.test.ts  copy.ts  manifest.test.ts  manifest.ts  prepare-training-data.ts  scan.test.ts  scan.ts  transforms.test.ts  transforms.ts  types.ts  validate.test.ts  validate.ts
(+757 files in other folders)
